# cargo-gears

./: .clippy.toml  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  SKILL.md
crates/cargo-gears/: Cargo.toml
crates/cargo-gears-core/: Cargo.toml  build.rs
crates/cargo-gears-core/dylint_lints/: Cargo.toml  README.md
crates/cargo-gears-core/dylint_lints/de01_domain_layer/de0101_no_serde_in_domain/: Cargo.toml
crates/cargo-gears-core/dylint_lints/de01_domain_layer/de0102_no_toschema_in_domain/: Cargo.toml
crates/cargo-gears-core/dylint_lints/de01_domain_layer/de0104_no_api_dto_in_domain/: Cargo.toml
crates/cargo-gears-core/dylint_lints/lint_utils/src/: lib.rs
crates/cargo-gears-core/shared/: SKILL.md
crates/cargo-gears-core/src/: app_config.rs  common.rs  lib.rs  manifest.rs
crates/cargo-gears-core/src/config/: mod.rs
crates/cargo-gears-core/src/config/db/: mod.rs
crates/cargo-gears-core/src/config/gears/: add.rs  db.rs  mod.rs
crates/cargo-gears-core/src/config/modules/: add.rs  db.rs  mod.rs  remove.rs
crates/cargo-gears-core/src/deploy/: mod.rs
crates/cargo-gears-core/src/gears/: metadata.rs  module_rs.rs  source.rs
crates/cargo-gears-core/src/gears_parser/: config.rs  metadata.rs  module_rs.rs  source.rs
crates/cargo-gears-core/src/generate/: config.rs  gear.rs  mod.rs  module.rs  workspace.rs
crates/cargo-gears-core/src/help/: mod.rs
crates/cargo-gears-core/src/lint/: mod.rs
crates/cargo-gears-core/src/list/: gears.rs  mod.rs  modules.rs  templates.rs
crates/cargo-gears-core/src/module_parser/: metadata.rs
crates/cargo-gears-core/src/run/: mod.rs  run_loop.rs  watch.rs
crates/cargo-gears-core/src/source/: mod.rs
crates/cargo-gears-core/src/test/: cargo.rs  llvm-cov.rs  mod.rs
crates/cargo-gears-core/src/tools/: mod.rs
crates/cargo-gears-lints/: Cargo.toml  README.md  rust-toolchain.toml
crates/cargo-gears-lints/de07_security/de0707_drop_zeroize/: Cargo.toml
crates/cargo-gears-lints/de11_testing/de1101_tests_in_separate_files/: README.md
crates/cargo-gears-lints/de13_common_patterns/de1302_error_from_to_string/: Cargo.toml
crates/cargo-gears-lints/de13_common_patterns/de1303_no_primitive_type_alias/: Cargo.toml  README.md
crates/cargo-gears-lints/docs/: README.md
crates/cargo-gears-lints/src/: lib.rs  lint_utils.rs
crates/cargo-gears-lints/src/de01_domain_layer/: de0101_no_serde_in_domain.rs  de0102_no_toschema_in_domain.rs  de0104_no_api_dto_in_domain.rs
crates/cargo-gears-lints/src/de02_api_layer/: de0201_dtos_only_in_api_rest.rs  de0202_dtos_not_referenced_outside_api.rs  de0203_dtos_must_use_api_dto.rs  de0204_dtos_must_have_toschema_derive.rs
crates/cargo-gears-lints/src/de03_domain_layer/: de0301_no_infra_in_domain.rs  de0308_no_http_in_domain.rs
crates/cargo-gears-lints/src/de05_client_layer/: de0503_plugin_client_suffix.rs  de0504_client_versioning.rs
crates/cargo-gears-lints/src/de07_security/: de0706_no_direct_sqlx.rs  de0707_drop_zeroize.rs  de0708_no_non_fips_hasher.rs
crates/cargo-gears-lints/src/de08_rest_api_conventions/: de0801_api_endpoint_version.rs  de0802_use_odata_ext.rs  de0803_api_snake_case.rs
crates/cargo-gears-lints/src/de09_gts_layer/: de0901_gts_string_pattern.rs  de0902_no_schema_for_on_gts_structs.rs
crates/cargo-gears-lints/src/de11_testing/: de1101_tests_in_separate_files.rs
crates/cargo-gears-lints/src/de12_documentation/: de1201_docs_rs_all_features.rs
crates/cargo-gears-lints/src/de13_common_patterns/: de1301_no_print_macros.rs  de1302_error_from_to_string.rs  de1303_no_primitive_type_alias.rs
crates/cargo-gears-macros/: Cargo.toml
crates/cargo-gears/src/: build.rs  config.rs  deploy.rs  generate.rs  help.rs  lib.rs  lint.rs  list.rs  main.rs  manifest.rs  run.rs  source.rs  testing.rs  tools.rs
crates/cargo-gears/src/common/: mod.rs
crates/cargo-gears/tests/: cmd_build.rs  cmd_config.rs  cmd_docs.rs  cmd_generate.rs  cmd_help.rs  cmd_lint.rs  cmd_list.rs  cmd_manifest.rs  cmd_run.rs  cmd_test.rs  cmd_tools.rs
crates/cargo-gears/tests/common/: mod.rs
crates/cyberware-cli/: Cargo.toml
crates/cyberware-cli-core/: Cargo.toml  build.rs
crates/cyberware-cli-core/shared/: ensure_toolchain_installed.rs
crates/cyberware-cli-core/src/: app_config.rs  common.rs  lib.rs  manifest.rs
crates/cyberware-cli-core/src/config/: mod.rs
crates/cyberware-cli-core/src/deploy/: mod.rs
crates/cyberware-cli-core/src/docs/: mod.rs
crates/cyberware-cli-core/src/generate/: config.rs  mod.rs  module.rs  workspace.rs
crates/cyberware-cli-core/src/help/: mod.rs
crates/cyberware-cli-core/src/init/: mod.rs
crates/cyberware-cli-core/src/lint/: mod.rs
crates/cyberware-cli-core/src/list/: apps.rs  configs.rs  local_modules.rs  mod.rs  modules.rs  system_modules.rs
crates/cyberware-cli-core/src/mod/: add.rs  mod.rs
crates/cyberware-cli-core/src/module_parser/: metadata.rs  test_utils.rs
crates/cyberware-cli-core/src/run/: mod.rs  run_loop.rs
crates/cyberware-cli-core/src/source/: mod.rs
crates/cyberware-cli-core/src/test/: mod.rs
crates/cyberware-cli-core/src/tools/: mod.rs
crates/cyberware-cli/src/: build.rs  config.rs  deploy.rs  docs.rs  generate.rs  help.rs  init.rs  lib.rs  lint.rs  list.rs  main.rs  manifest.rs  module.rs  run.rs  source.rs  testing.rs  tools.rs
crates/cyberware-cli/src/common/: mod.rs
crates/cyberware-cli/tests/: cmd_build.rs  cmd_config.rs  cmd_docs.rs  cmd_generate.rs  cmd_help.rs  cmd_lint.rs  cmd_list.rs  cmd_manifest.rs  cmd_mod.rs  cmd_run.rs  cmd_tools.rs  parse_contract.rs
crates/cyberware-cli/tests/common/: mod.rs
crates/gears-cli/: Cargo.toml
crates/gears-cli-derive/: Cargo.toml
crates/gears-cli/src/: build.rs  config.rs  deploy.rs  generate.rs  help.rs  lib.rs  lint.rs  list.rs  main.rs  manifest.rs  run.rs  source.rs  testing.rs  tools.rs
crates/gears-cli/src/common/: mod.rs
crates/gears-cli/tests/: cmd_build.rs  cmd_config.rs  cmd_docs.rs  cmd_generate.rs  cmd_help.rs  cmd_lint.rs  cmd_list.rs  cmd_manifest.rs  cmd_run.rs  cmd_test.rs  cmd_tools.rs
crates/gears-cli/tests/common/: mod.rs
(+263 files in other folders)
