[workspace]
members = [
    "crates/cargo-gears",
    "crates/cargo-gears-core",
    "crates/cargo-gears-macros",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
license-file = "LICENSE"
authors = ["Constructor Fabric"]
repository = "https://github.com/constructorfabric/cf-cli"
edition = "2024"
readme = "README.md"

[workspace.dependencies]
cargo-gears-macros = { path = "crates/cargo-gears-macros", version = "0.0.1" }
cargo-gears-core = { path = "crates/cargo-gears-core", version = "0.0.1" }

anyhow = { version = "1.0" }
clap = { version = "4.6", features = ["derive"] }

cargo-generate = { version = "0.23.11" }
cargo_metadata = { version = "0.23.1" }

dylint = "6.0.1"

serde = { version = "1.0", features = ["derive"] }
serde-saphyr = { version = "0.0.28" }
serde_json = { version = "1.0" }
schemars = { version = "1.2.1"}

toml = { version = "1.1.2", features = ["serde"] }
toml_edit = "0.25.12"

notify = { version = "8.2", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
flate2 = { version = "1.1" }
tar = { version = "0.4" }
semver = { version = "1.0" }

syn = { version = "2.0.117", features = ["full"] }

prettyplease = { version = "0.2.37" }
proc-macro2 = { version = "1.0.106" }
quote = { version = "1.0" }
tempfile = { version = "3.27.0" }

tracing = { version = "0.1.44" }

# BEGIN related to nextest
guppy = { version =  "0.17.26" }
camino = { version = "1.2.2" }
shell-words = { version =  "1.1.1" }
nextest-runner = { version =  "0.118.0" }
nextest-filtering = { version =  "0.21.1" }
# END related to nextest

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
unwrap_used = "deny"
expect_used = "deny"
