[package]
name = "cargo-gears-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core functionality library for cargo-gears"
readme.workspace = true
publish = true

[features]
default = []
dylint-rules = ["dep:dylint"]
test-utils = []
clap = ["dep:clap"]

[dependencies]
anyhow = { workspace = true }
cargo-generate = { workspace = true }

cargo_metadata = { workspace = true }
notify = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }

serde = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
dylint = { workspace = true, optional = true }
syn = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
cargo-gears-macros = { workspace = true }

guppy = { workspace = true }
camino = { workspace = true }
shell-words = { workspace = true }
nextest-runner = { workspace = true }
nextest-filtering = { workspace = true }

[lints]
workspace = true

[build-dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
