[package]
name = "cargo-gears-macros"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description = "Derive macros for cargo-gears"
readme.workspace = true
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[lints]
workspace = true
