[package]
name = "cyberware-cli-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish = false

[features]
default = []
dylint-rules = ["dep:dylint"]
test-utils = []
clap = ["dep:clap"]

[dependencies]
anyhow = { workspace = true }
cargo-generate = { workspace = true }

cargo_metadata = { workspace = true }
notify = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }

serde = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
dylint = { workspace = true, optional = true }
syn = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }

[lints]
workspace = true

[build-dependencies]
anyhow = { workspace = true }
toml.workspace = true
