[package]
name = "gears-cli-derive"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description = "Derive macros for gears-cli"
readme.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = "1.0"
syn = { workspace = true, features = ["full", "extra-traits"] }

[lints]
workspace = true
